# s2dataset

./: .gitignore  README.md  pylock.toml  pyproject.toml
examples/: download_chips.py  download_product.py
src/s2dataset/: common.py  create_negatives.py  create_positives.py  create_targets.py
src/s2utils/: __init__.py  catalog.py  product.py  tile.py  tiles.py  utils.py
src/s2utils/resources/: s2_tiling_grid.fgb.zst
