[tool.poetry]
name = "s2dataset"
version = "0.1.0"
description = "Create machine learning datasets from Sentinel-2 data."
license = "MIT"
authors = ["Mikkel Stårvik <mikkel.starvik@gmail.com>"]
readme = "README.md"

packages = [
    { include = "s2utils", from = "src" },
    { include = "s2dataset", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
affine = "^2.3.0"
fiona = "^1.9.0"
pyproj = "^3.4.0"
pystac-client = "^0.7.1"
rasterio = "^1.3.0"
shapely = "^2.0.0"
tqdm = "^4.52.0"
zstandard = "^0.20.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
