[project]
name = "s2dataset"
version = "0.1.0"
description = "Create machine learning datasets from Sentinel-2 data."
license = "MIT"
authors = ["Mikkel Stårvik <mikkel.starvik@gmail.com>"]
readme = "README.md"

packages = [
    { include = "s2utils", from = "src" },
    { include = "s2dataset", from = "src" }
]

dependencies = [
    "affine",
    "fiona",
    "pyproj",
    "pystac-client",
    "rasterio",
    "shapely",
    "tqdm",
    "zstandard"
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
