[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "s2dataset"
version = "0.1.0"
description = "Create machine learning datasets from Sentinel-2 data."
license = "MIT"
authors = [
    {name = "Mikkel Stårvik", email = "mikkel.starvik@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "affine",
    "fiona",
    "pyproj",
    "pystac-client",
    "rasterio",
    "shapely",
    "tqdm",
    "zstandard"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["s2utils", "s2dataset"]

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
useLibraryCodeForTypes = true

reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
